Closed Bug 1771273 Opened 2 years ago Closed 2 years ago

nss fails to build on gcc-13: cpputil/databuffer.h:20:20: error: 'uint8_t' does not name a type

Categories

(NSS :: Build, defect)

defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: slyich, Unassigned)

Details

Attachments

(2 files)

Steps to reproduce:

Attempted to build the system that includes firefox and nss with this week's gcc-13 snapshot. Recently #include <string> stopped including <cstdint> implicitly and that exposed a few problems.

Actual results:

Build failed as:

../../cpputil/databuffer.h:20:20: error: 'uint8_t' does not name a type
   20 |   DataBuffer(const uint8_t* d, size_t l) : data_(nullptr), len_(0) {
      |                    ^~~~~~~
../../cpputil/databuffer.h:14:1: note: 'uint8_t' is defined in header '<cstdint>'; did

you forget to '#include <cstdint>'?
13 | #include <iostream>
+++ |+#include <cstdint>
14 |

Without the change build fails on this week's gcc-13 snapshot as:

../../cpputil/databuffer.h:20:20: error: 'uint8_t' does not name a type
   20 |   DataBuffer(const uint8_t* d, size_t l) : data_(nullptr), len_(0) {
      |                    ^~~~~~~
../../cpputil/databuffer.h:14:1: note: 'uint8_t' is defined in header '<cstdint>'; did you forget to '#include <cstdint>'?
   13 | #include <iostream>
  +++ |+#include <cstdint>
   14 |
Attachment #9278305 - Attachment description: WIP: Bug 1771273 - cpputil/databuffer.h: add missing <cstdint> include → Bug 1771273 - cpputil/databuffer.h: add missing <cstdint> include
Status: UNCONFIRMED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: