Bug 1771273 - cpputil/databuffer.h: add missing <cstdint> include r=nss-reviewers,mt

Without the change build fails on this week's gcc-13 snapshot as:

    ../../cpputil/databuffer.h:20:20: error: 'uint8_t' does not name a type
       20 |   DataBuffer(const uint8_t* d, size_t l) : data_(nullptr), len_(0) {
          |                    ^~~~~~~
    ../../cpputil/databuffer.h:14:1: note: 'uint8_t' is defined in header '<cstdint>'; did you forget to '#include <cstdint>'?
       13 | #include <iostream>
      +++ |+#include <cstdint>
       14 |

Differential Revision: https://phabricator.services.mozilla.com/D147404