cpputil/databuffer.h
@@ -11,6 +11,7 @@
 #include <cstring>
 #include <iomanip>
 #include <iostream>
+#include <cstdint>
 
 namespace nss_test {
 
